[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/Map/OWCharacter.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Map/Map.gd" type="Script" id=2]
[ext_resource path="res://scripts/Resources.gd" type="Script" id=4]
[ext_resource path="res://scripts/CombatSystem.gd" type="Script" id=5]
[ext_resource path="res://scripts/Main.gd" type="Script" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="Main" type="Node"]
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_vertical_guides_": [  ]
}

[node name="Resources" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Map" type="Node2D" parent="."]
visible = false
script = ExtResource( 2 )

[node name="MapMouseControlButton" type="Button" parent="Map"]
margin_right = 800.0
margin_bottom = 600.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )

[node name="Characters" type="Node2D" parent="Map"]

[node name="OWPlayer" parent="Map/Characters" instance=ExtResource( 1 )]

[node name="CombatSystem" type="Node" parent="."]
script = ExtResource( 5 )

[connection signal="button_down" from="Map/MapMouseControlButton" to="Map" method="_on_MapMouseControlButton_button_down"]
[connection signal="button_up" from="Map/MapMouseControlButton" to="Map" method="_on_MapMouseControlButton_button_up"]
[connection signal="mouse_entered" from="Map/MapMouseControlButton" to="Map" method="_on_MapMouseControlButton_mouse_entered"]
[connection signal="mouse_exited" from="Map/MapMouseControlButton" to="Map" method="_on_MapMouseControlButton_mouse_exited"]
[connection signal="toggled" from="Map/MapMouseControlButton" to="Map" method="_on_MapMouseControlButton_toggled"]
